# fish-audio-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFlashAttention.cmake
docs/superpowers/plans/: 2026-06-22-int8-quantization.md  2026-06-22-rest-api-streaming.md
docs/superpowers/specs/: 2026-06-21-rest-api-streaming-design.md  2026-06-22-int8-quantization-design.md
example/: 000047.lab  vo_LLZAQ001_4_nahida_03.lab
models/model-fp16/: dac_config.json
models/s2-pro-int8-w8a16/: dual_ar_config.json
scripts/: build.sh  build_and_test.sh  build_windows.ps1  profile_w8a8.sh  test_all.ps1  test_all.sh  test_api.py  test_en.sh  test_ja.sh  test_mix.sh  test_mix_000047.sh  test_zh.sh
src/: main.cc
src/engine/: block_manager.cc  block_manager.h  dac_engine.cc  dac_engine.h  dual_ar_engine.cc  dual_ar_engine.h  inference_pipeline.cc  inference_pipeline.h  scheduler.cc  scheduler.h
src/kernels/: embedding.cu  ffn_activations.cu  int8_gemm.cu  kernels.h  paged_attention.cu  prefill_attention.cu  ras_sampling.cu  rms_norm.cu  rope.cu  rvq_lookup.cu  sampling.cu  snake.cu
src/model/: dac_config.cc  dac_config.h  dual_ar_config.cc  dual_ar_config.h  loader.cc  loader.h  tensor.h
src/server/: http_server.cc  http_server.h  routes.cc  routes.h
src/tokenizer/: tokenizer.cc  tokenizer.h
src/utils/: cuda_utils.h
tests/: test_block_manager.cc  test_dac_engine.cc  test_dual_ar_engine.cc  test_integration.cc  test_kernels.cu  test_model_loader.cc  test_scheduler.cc
tools/: build_reference_prompt.py  calibrate_int8.py  collect_calibration_w8a8.py  compare_dac_codes.py  compare_dac_dumps.py  compare_dac_encoder_dumps.py  compare_dac_quantizer_cross.py  convert_dac.py  convert_dual_ar.py  decode_audio.py  dump_dac_encoder_intermediates.py  dump_dac_intermediates.py  encode_reference.py  generate_codes.py  merge_calibration_dumps.py  quant_utils.py  quantize_int8.py  step1_convert_fp16.py  step2_export_w8a8.py  step2_quantize_int8.py  step3_calibrate_gptq.py  step3_calibrate_smoothquant.py  tokenize_text.py  tts_inference.py
